tests/Rules/Structure/Fixtures/valid/link_descriptive_text.html.twig
<p>Visit our <a href="/about">about page</a> for more information.</p>
