tests/Rules/Structure/Fixtures/invalid/link_generic_text.html.twig
{# 1 errors #}
<p>Visit our website. <a href="/about">click here</a></p>
